@@ -1,3 +1,8 @@
+2012-05-14 Philippe Roussel
+
+	* Song.m
+	Proper isEqual compare.
+	
 2012-05-13 Philippe Roussel
 
 	* Playlist.m
